# edge-compute-minimal-mapper_cpp-in-docker

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: main.cpp
